test_suite/tests/compile_fail/no_arri_attribute_arguments.rs
use ronky::Exported;

#[derive(Exported)]
struct Example {
    #[arri()]
    example: String,
}

fn main() {}
